[package]
name = "gitlab-search-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
config = "0.13"
dirs = "5.0"
futures = "0.3"
indicatif = "0.17"
